--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -11,7 +11,7 @@
                 {% for listing in active_listings %}
                 <div class="col-12 col-lg-4 mb-5" >
                     <div class="card" style="width: 18rem;">
-                        <a href="{% url 'listing_detail' listing.id %}" class="link-dark text-decoration-none">
+                        <a href="{% url 'listing_detail' listing.slug %}" class="link-dark text-decoration-none">
 
                         <img src="{{ listing.image.url }}" class="card-img-top " alt="{{ listing.image }}" style="height: 200px; object-fit:contain;">
                     
