--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -23,6 +23,10 @@
             </li>
 
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'closed_listing' %}">Closed Listings</a>
+            </li>
+
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'categories' %}">Categories</a>
             </li>
 
