--- a/auctions/templates/auctions/listing_detail.html
+++ b/auctions/templates/auctions/listing_detail.html
@@ -55,12 +55,36 @@
                 <hr>
                 <p><strong>Creted at: </strong>{{listing.created_at }}</p>
                 <p><strong>Listed by: </strong>{{listing.lister }}</p>
+
                 {% if check %}
                 <a href="{% url 'close_auction' listing.slug %}" type="button" class="btn btn-outline-danger mb-2">
                     Close Auction
                 </a> 
                 {% endif %}
             </div>
+
+            {% if user.is_authenticated %}
+            <div class="col-12 col-lg-4 shadow rounded bg-white p-3">
+                <div class="">
+                   <form action="{% url 'comment' listing.slug %}" method="post">
+                        {% csrf_token %}
+                        <textarea class="form-control" name="cmt" placeholder="Comment here.."></textarea>
+                        <button type="submit" class="btn btn-primary float-right mt-2">Post</button>
+                    </form> 
+                </div>
+                <br><br>
+                {% if comments %}
+                    {% for comment in comments %}
+                    <div class="shadow bg-white rounded-lg mt-4 px-3 ">
+                        <span class="font-weight-bold">{{ comment.user }}</span>
+                        <span class="text-muted">{{ comment.created_at }}</span>
+                        <p>{{ comment.comment }}</p>
+                    </div>
+                    {% endfor %}
+                {% endif %}
+                    
+            </div>
+            {% endif %}
         </div>
     </div>
    
