debugging stage1 completed

--- a/auctions/templates/auctions/closed_listing.html
+++ b/auctions/templates/auctions/closed_listing.html
@@ -27,7 +27,7 @@
                 </div>
                 {% endfor %}
         {% else %}
-        <h4>No active listings</h4>
+        <h4>No listings</h4>
             </div>
         </div>
               
