--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -2,26 +2,44 @@
 
 {% block body %}
     <h2 class="display-4">Watchlist</h2><br>
-
-        {% if watchlist %}
-            {% for listing in watchlist %}
-            <div class="container">
-                <div class="row">
-                    <div class="col-6 col-lg-4">
-                        <img src="{{ listing.image.url }}" class="card-img-top " alt="{{ listing.image }}" style="height: 200px; object-fit:contain;">
-                    </div>
-                    <div class="col-6 col-lg-8">
-                        <h4>{{ listing.title }}</h4>
-                        <p class ='text-muted'><strong>Price: </strong>{{listing.starting_bid }} $</p>
-                        <p>{{listing.category }}</p>
-                        <a href="{% url 'listing_detail' listing.slug %}" type="button" class="btn btn-outline-secondary mb-2">Detail</a>
+            {% if active_listings %}
+                {% for listing in active_listings %}
+                <div class="container">
+                    <div class="row">
+                        <div class="col-6 col-lg-4">
+                            <img src="{{ listing.image.url }}" class="card-img-top " alt="{{ listing.image }}" style="height: 200px; object-fit:contain;">
+                        </div>
+                        <div class="col-6 col-lg-8">
+                            <h4>{{ listing.title }}</h4>
+                            <p class ='text-muted'><strong>Price: </strong>{{listing.starting_bid }} $</p>
+                            <p>{{listing.category }}</p>
+                            <a 
+                            href="{% url 'listing_detail' listing.slug %}"
+                            type="button" class="btn btn-outline-secondary mb-2">Detail</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            {% endfor %}
-        {% else %}
-        <h4 class="mt-5 text-info">No listings in watchlist yet</h4>
-
+                {% endfor %}
+            {% endif %}
+    <hr>
+        {% if closed_listings %}
+                {% for listing in closed_listings %}
+                <div class="container">
+                    <div class="row">
+                        <div class="col-6 col-lg-4">
+                            <img src="{{ listing.image.url }}" class="card-img-top " alt="{{ listing.image }}" style="height: 200px; object-fit:contain;">
+                        </div>
+                        <div class="col-6 col-lg-8">
+                            <h4>{{ listing.title }}</h4>
+                            <p class ='text-muted'><strong>Highest Bid: </strong>{{listing.highest_bid }} $</p>
+                            <p><strong>This listing has been closed.</strong> </p>
+                            <a 
+                            href="{% url 'closed_listing_detail' listing.slug %}"
+                            type="button" class="btn btn-outline-secondary mb-2">Check here</a>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
         {% endif %}
 {% endblock %}
               
