--- a/auctions/templates/auctions/category_detail.html
+++ b/auctions/templates/auctions/category_detail.html
@@ -2,27 +2,31 @@
 
 {% block title %} {{ category.title }} {% endblock %}
 {% block body %}
-    <h2 class="display-4">{{ category.title }}</h2>
+    <h2 class="display-4">{{ category.title }}</h2><br>
 
     {% if listings %}
+    <div class="container">
+        <div class="row">
         {% for listing in listings %}
-        <div class="col-12 col-lg-4 mb-5" >
-            <div class="card" style="width: 18rem;">
-                <a href="{% url 'listing_detail' listing.id %}" class="link-dark text-decoration-none">
+            <div class="col-12 col-lg-4 mb-5" >
+                <div class="card" style="width: 18rem;">
+                    <a href="{% url 'listing_detail' listing.slug %}" class="link-dark text-decoration-none">
 
-                <img src="{{ listing.image.url }}" class="card-img-top " alt="{{ listing.image }}" style="height: 200px; object-fit:contain;">
-            
-                <div class="card-body mt-4">
-                    <h5 class="card-title">{{ listing.title }}</h5>
-                    <p class="card-text text-muted"><strong>Price: </strong>{{listing.starting_bid }} $</p>
-                    <p class="card-text">{{listing.description }}</p>
+                    <img src="{{ listing.image.url }}" class="card-img-top " alt="{{ listing.image }}" style="height: 200px; object-fit:contain;">
+                
+                    <div class="card-body mt-4">
+                        <h5 class="card-title">{{ listing.title }}</h5>
+                        <p class="card-text text-muted"><strong>Price: </strong>{{listing.starting_bid }} $</p>
+                        <p class="card-text">{{listing.description }}</p>
+                    </div>
+                    </a>
+                    
                 </div>
-                </a>
-               
             </div>
-        </div>
         {% endfor %}
     {% else %}
         <h4 class="mt-5 text-info">No active listings</h4>
     {% endif %}
+        </div>
+    </div>
 {% endblock %}
