--- a/auctions/templates/auctions/create_listing.html
+++ b/auctions/templates/auctions/create_listing.html
@@ -7,31 +7,49 @@
         {% csrf_token %}
 
         <div class="form-group">
-            <label id="title">Title</label>
-            <input type="text" id="title" name="title" class="form-control">
+            <label id="title" class="col-sm-2">Title</label>
+            <div class="col-sm-10">
+                 <input type="text" id="title" name="title" class="form-control">
+            </div>   
         </div>
 
         <div class="form-group">
-            <label id="category">Category</label>
-            <input type="text" id="category" name="category" class="form-control">
+            <label for="category" class="col-sm-2">Category</label>
+            <div class="col-sm-10">
+                <select name="category" class="form-control">
+                    {% for category in categories %}
+                    <option value="{{ category }}">{{ category }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+          
         </div>
 
         <div class="form-group">
-            <label id="description">Description</label>
-            <textarea id="description" name="description" class="form-control" placeholder="Type your description here.."></textarea>
+            <label id="description" class="col-sm-2">Description</label>
+            <div class="col-sm-10">
+                <textarea id="description" name="description" class="form-control" placeholder="Type your description here.."></textarea>
+            </div>
+            
         </div>
 
         <div class="form-group">
-            <label id="starting_bid">Starting Bid</label>
-            <input type="number" id="starting_bid" name="starting_bid" class="form-control">
+            <label id="starting_bid" class="col-sm-2">Starting Bid</label>
+            <div class="col-sm-10">
+                <input type="number" id="starting_bid" name="starting_bid" class="form-control">
+            </div>
+            
         </div>
 
         <div class="form-group">
-            <label id="image">Image</label>
-            <input type="file" id="image" name='image' class="form-control-file">
+            <label id="image" class="col-sm-2">Image</label>
+            <div class="col-sm-10">
+                <input type="file" id="image" name='image' class="form-control-file">
+            </div>
+            
         </div>
 
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="ml-3 mt-3 btn btn-primary">Create</button>
         
     </form>
 {% endblock %}
