--- a/auctions/templates/auctions/listing_detail.html
+++ b/auctions/templates/auctions/listing_detail.html
@@ -74,13 +74,16 @@
                 </div>
                 <br><br>
                 {% if comments %}
-                    {% for comment in comments %}
+                <div class="overflow-auto p-3 mt-2 bg-light" style="max-width: 60rem; max-height: 30rem;">
+                     {% for comment in comments %}
                     <div class="shadow bg-white rounded-lg mt-4 px-3 ">
                         <span class="font-weight-bold">{{ comment.user }}</span>
                         <span class="text-muted">{{ comment.created_at }}</span>
                         <p>{{ comment.comment }}</p>
                     </div>
                     {% endfor %}
+                </div>
+                   
                 {% endif %}
                     
             </div>
